<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="music_name_tab">曲名</string>
    <string name="music_arist_tab">歌手</string>
    <string name="music_album_tab">专辑</string>
     <string name="music_favorites_tab">最爱</string>
    <string name="music_intert_tab">在线</string>
    <string name="music_hint_search">请输入歌名</string>
    <string name="music_auto_search">最近的记录</string>
    <string name="app_name">飞歌播放器</string>
    <string name="xml_activity_main_sliding_top_text">列表选择</string>
    <string name="xml_activity_main_folder_back_text">返回上一级</string>
    <string name="xml_activity_scan_title">扫描歌曲</string>
    <string name="xml_activity_setting_title">设置</string>
    <string name="xml_activity_setting_skin">更换背景</string>
    <string name="xml_activity_setting_lyric">更换歌词高亮颜色</string>
    <string name="xml_activity_setting_headset_title">耳机线控(不稳定，暂不允许更改)</string>
    <string name="xml_activity_setting_headset_text">互换长按与双击行为</string>
    <string name="xml_dialog_scan_title">扫描歌曲</string>
    <string name="xml_dialog_scan_info">列表空空如也，先去找找歌曲吧！</string>
    <string name="xml_dialog_scan_btn">  嗯。</string>
    <string name="xml_dialog_menu_remove">从列表中移除</string>
    <string name="xml_dialog_menu_delete">从文件中删除</string>
    <string name="xml_dialog_menu_info">查看歌曲详情</string>
     <string name="xml_dialog_menu_ringtone">设置铃声</string>
    <string name="xml_dialog_delete_title">警告</string>
    <string name="xml_dialog_delete_info">确认将文件从SD卡上删除？</string>
    <string name="xml_dialog_delete_positive">确定</string>
    <string name="xml_dialog_delete_negative">取消</string>
    <string name="xml_dialog_info_title">歌曲信息</string>
    <string name="xml_dialog_about_title">关于</string>
    <string name="xml_dialog_about_info1">本软件是一款高仿天天动听的MP3音乐播放器，支持对本地音乐扫描、播放、及快进快退等操作，播放时可以查看歌曲详情，支持歌词的两种模式显示、均衡器效果、耳机线控、播放界面横竖屏切换，播放的视觉效果较为丰富，并且可以简单的个性化播放界面。注意歌词必须跟歌曲放在同一文件夹下，并且保持文件名相同。本软件的素材大部分取自天天动听，还有部分来自网络，某些相关素材有做修改。未想过商业盈利，应该木有什么关系吧。</string>
    <string name="xml_dialog_about_info2">本播放器软件支持AAC、ＭＰ3、ＡＰＥ、ＦＬＡＣ、ＡＣ3、ＭＰ2、ＷＡＶ、Ｍ4Ａ、ＷＭＡ、ＯＧＧ（ＤＴＳ、ＡＲＴＩＡＬ）格式的音乐！</string>
    <string name="xml_dialog_about_info3">完善中。。。。</string>
    <string name="xml_dialog_about_info4">作者：。。。。</string>
    <string name="xml_dialog_about_info5">完成日期：2014：07：10</string>
    <string name="xml_dialog_about_info6"> Open Source Project</string>
    <string name="xml_dialog_btn_negative">关闭</string>
    <string name="xml_appwidget_name">无音乐</string>
    <string name="xml_load">下载</string>
    <string name="xml_sousuo">搜索</string>
    <string name="xml_bofang">在线播放</string>
    <string name="xml_music_init">00:00--00:00</string>
    <string name="xml_no_musicinfo">无歌词信息！</string>
    <string name="xml_set_color">ARGB设置：</string>
    <string name="xml_musicsize_text">首歌曲</string>
    <string name="xml_foldersize_text">个文件</string>
    <string name="xml_music_size">大小： </string>
    <string name="xml_music_name">歌曲： </string>
    <string name="xml_music_arist">歌手： </string>
    <string name="xml_music_album">专辑： </string>
    <string name="xml_music_format">格式： </string>
    <string name="xml_music_time">时长： </string>
    <string name="xml_music_kpbs">比特率： </string>
    <string name="xml_music_year">年代： </string>
    <string name="xml_music_hz">采样率： </string>
    <string name="xml_music_path">路径： </string>
    <string name="xml_music_gener">风格： </string>
    <string name="xml_music_info">未知 </string>
    <string name="xml_music_channels">声道： </string>
    <string name="xml_music_channels_normal">声道:立体声 </string>
    <string name="xml_music_person_kpbs">kpbs </string>
    <string name="xml_music_person_hz">hz</string>
    <string name="xml_mode_normal">顺序播放</string>
    <string name="xml_mode_repeat_one">单曲循环</string>
    <string name="xml_mode_repeat_all">全部循环</string>
    <string name="xml_mode_repeat_random">随机循环</string>
    <string name="xml_scan_finish">扫描完成</string>
    <string name="xml_scan_doing">正在扫描</string>
    <string name="xml_scan_waiting">等待扫描</string>
    <string name="xml_scan_normal">扫描歌曲</string>
    <string name="xml_toast_delete">文件已删除</string>
    <string name="xml_total">0 m</string>
    <string name="xml_percent">0%</string>
    <string name="no_effects">Effects not available.</string>
    <string name="main_toggle_effects_title">Audio effects</string>
    <string name="eq_dialog_title">Equalizer</string>
    <string name="headset_plug">Plug in headphones for these effects.</string>
    <string name="bass_boost_strength">Bass boost</string>
    <string name="virtualizer_strength">Surround sound</string>
    <string name="pr_title">Reverb:</string>
    <string name="pr_summary">Additional room reverberation effects</string>
    <string name="pr_dialog_title">Reverb preset</string>
    <string name="setup">设置</string>
    <string name="ci_extreme">FX booster</string>
    <string name="user">自定义</string>
    <!-- title of control panel picker dialog [CHAR LIMIT=30] -->
    <string name="picker_title">Music effects control panel"</string>
    <string name="AffectActivity_finish">设置完成</string>
    <string name="PlayerActivity_dialog">完成</string>
    <string name="dialog_layout_A">  A  </string>
    <string name="dialog_layout_R">  R  </string>
    <string name="dialog_layout_G">  G  </string>
    <string name="dialog_layout_B">  B  </string>

</resources>