<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:background="@color/view_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/activity_setting_ib_return"
            android:layout_width="45.0dip"
            android:layout_height="45.0dip"
            android:background="@drawable/btn_bg_style"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:text="@string/xml_activity_setting_title"
            android:textColor="@color/white"
            android:textSize="17.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190.0dip"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35.0dip"
            android:gravity="bottom"
            android:paddingLeft="10.0dip"
            android:text="@string/xml_activity_setting_skin"
            android:textColor="@color/baby_blue"
            android:textSize="14.0sp" />

        <LinearLayout
            android:id="@+id/activity_setting_view_skin"
            android:layout_width="match_parent"
            android:layout_height="155.0dip"
            android:gravity="center"
            android:orientation="horizontal" >
            <Gallery
                android:id="@+id/subject_gallery"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115.0dip"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35.0dip"
            android:gravity="bottom"
            android:paddingLeft="10.0dip"
            android:text="@string/xml_activity_setting_lyric"
            android:textColor="@color/baby_blue"
            android:textSize="14.0sp" />

        <LinearLayout
            android:id="@+id/activity_setting_view_lyric"
            android:layout_width="match_parent"
            android:layout_height="65.0dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Gallery
                android:id="@+id/lyric_gallery"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100.0dip"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30.0dip"
            android:gravity="center_vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/xml_activity_setting_headset_title"
            android:textColor="@color/baby_blue"
            android:textSize="14.0sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="30.0dip"
                android:layout_weight="0.35"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/xml_activity_setting_headset_title"
                android:textColor="@color/baby_blue"
                android:textSize="14.0sp" />

            <Switch
                android:layout_width="53.0dip"
                android:layout_height="53.0dip"
                android:layout_marginLeft="60dp"
                android:textOff="@drawable/img_toggle_off" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>